--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@angular/language-service": "~12.2.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
