--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "inlineStyleLanguage": "scss"
           },
           "configurations": {
             "production": {
