--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "json-server": "json-server --watch db.json"
+    "json-server": "json-server --watch db.json",
+    "start-docserver": "npx compodoc -p tsconfig.doc.json --includes markdown && http-server -p 8080 -c-1 documentation",
+    "compodoc": "npx compodoc -p tsconfig.doc.json --includes markdown"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.3",
-    "@angular/cdk": "^12.2.0",
+    "@angular/cdk": "^13.1.3",
     "@angular/common": "~13.1.3",
     "@angular/compiler": "~13.1.3",
     "@angular/core": "~13.1.3",
@@ -38,9 +40,10 @@
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.3",
     "@angular/language-service": "~13.1.3",
-    "@types/node": "^12.11.1",
+    "@compodoc/compodoc": "^1.1.18",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
