--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngrx/store-devtools": "^13.0.2",
     "json-server": "^0.15.1",
     "lodash-es": "^4.17.15",
+    "ngx-hotjar": "^11.0.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
